--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -33,8 +33,9 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
   implementation "org.jetbrains.kotlin:kotlin-reflect:${versions.kotlin}"
   implementation 'com.google.android.gms:play-services-safetynet:17.0.0'
+  implementation "androidx.lifecycle:lifecycle-process:2.2.0"
   implementation project(':okhttp')
-  testImplementation 'junit:junit:4.12'
+  testImplementation 'junit:junit:4.13'
   androidTestImplementation(project(':okhttp-testing-support')) {
     exclude group: 'org.openjsse', module: 'openjsse'
     exclude group: 'org.conscrypt', module: 'conscrypt-openjdk-uber'
@@ -45,8 +46,8 @@ dependencies {
   androidTestImplementation project(':okhttp-tls')
   androidTestImplementation project(':okhttp-dnsoverhttps')
   androidTestImplementation project(':okhttp-logging-interceptor')
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-  androidTestImplementation 'com.squareup.moshi:moshi:1.8.0'
-  androidTestImplementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+  androidTestImplementation 'com.squareup.moshi:moshi:1.9.2'
+  androidTestImplementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
 }
