--- a/samples/guide/build.gradle
+++ b/samples/guide/build.gradle
@@ -4,6 +4,7 @@ dependencies {
   implementation project(':okhttp')
   implementation project(':mockwebserver')
   implementation project(':okhttp-tls')
+  implementation deps.animalSniffer
   implementation deps.moshi
   kapt deps.moshiKotlin
 }
