--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -49,4 +49,5 @@ dependencies {
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   androidTestImplementation 'com.squareup.moshi:moshi:1.8.0'
   androidTestImplementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
+  androidTestImplementation 'org.apache.httpcomponents.client5:httpclient5:5.0'
 }
