--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -16,6 +16,10 @@ android {
     targetCompatibility JavaVersion.VERSION_1_8
   }
 
+  packagingOptions {
+    exclude("META-INF/DEPENDENCIES")
+  }
+
   compileSdkVersion 29
 
   defaultConfig {
