--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,15 +39,17 @@ markdown_extensions:
 
 nav:
   - 'Overview': index.md
+  - 'Stack Overflow ⏏': https://stackoverflow.com/questions/tagged/okhttp?sort=active
   - 'Calls': calls.md
   - 'Connections': connections.md
-  - 'Recipes': recipes.md
-  - 'Interceptors': interceptors.md
-  - 'HTTPS': https.md
   - 'Events': events.md
-  - 'Works with OkHttp': works_with_okhttp.md
+  - 'HTTPS': https.md
+  - 'Interceptors': interceptors.md
+  - 'Recipes': recipes.md
+  - 'Security': security.md
   - 'Security Providers': security_providers.md
-  - 'Stack Overflow ⏏': https://stackoverflow.com/questions/tagged/okhttp?sort=active
+  - 'Works with OkHttp': works_with_okhttp.md
+  - 'Upgrading to OkHttp 4': upgrading_to_okhttp_4.md
   - '4.x API':
     - 'okhttp': 4.x/okhttp/okhttp3/index.md
     - 'brotli': 4.x/okhttp-brotli/okhttp3.brotli/index.md
@@ -57,7 +59,7 @@ nav:
     - 'tls': 4.x/okhttp-tls/okhttp3.tls/index.md
     - 'urlconnection': 4.x/okhttp-urlconnection/okhttp3/index.md
     - 'mockwebserver': 4.x/mockwebserver/okhttp3.mockwebserver/index.md
-  - '3.x API':
+  - '3.12.x API':
     - 'okhttp ⏏': https://square.github.io/okhttp/3.x/okhttp/
     - 'dnsoverhttps ⏏': https://square.github.io/okhttp/3.x/okhttp-dnsoverhttps/
     - 'logging-interceptor ⏏': https://square.github.io/okhttp/3.x/logging-interceptor/
@@ -66,7 +68,6 @@ nav:
     - 'urlconnection ⏏': https://square.github.io/okhttp/3.x/okhttp-urlconnection/
     - 'mockwebserver ⏏': https://square.github.io/okhttp/3.x/mockwebserver/
   - 'Change Log': changelog.md
-  - 'Upgrading to OkHttp 4': upgrading_to_okhttp_4.md
   - 'Contributing': contributing.md
   - 'Code of Conduct': code_of_conduct.md
 
