--- a/build.gradle
+++ b/build.gradle
@@ -143,6 +143,8 @@ subprojects { project ->
 
   // Animal Sniffer confirms we don't use APIs not on both Java 8 and Android 5.
   animalsniffer {
+    excludeJars "android-all-*"
+    annotation "okhttp3.internal.SuppressSignatureCheck"
     sourceSets = [sourceSets.main]
   }
   dependencies {
