--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,7 @@ ext.publishedArtifactId = { project ->
 allprojects {
   group = 'com.squareup.okhttp3'
   project.ext.artifactId = rootProject.ext.publishedArtifactId(project)
-  version = '4.5.0-SNAPSHOT'
+  version = '4.5.0'
 
   repositories {
     mavenCentral()
