--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
       'jnrUnixsocket': '0.28',
       'jsoup': '1.13.1',
       'junit': '4.13',
-      'kotlin': '1.3.70',
+      'kotlin': '1.3.71',
       'moshi': '1.9.2',
       'okio': '2.5.0',
       'ktlint': '0.36.0',
@@ -50,8 +50,8 @@ buildscript {
   dependencies {
     classpath 'net.ltgt.gradle:gradle-errorprone-plugin:1.1.1'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
-    classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.0"
-    classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.27.0'
+    classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
+    classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.27.1'
     classpath 'com.android.tools.build:gradle:3.4.2'
   }
 
@@ -204,6 +204,7 @@ subprojects { project ->
   }
 
   dependencies {
+    //noinspection GradleDynamicVersion
     errorproneJavac 'com.google.errorprone:javac:9+181-r4173-1'
     errorprone 'com.google.errorprone:error_prone_core:2.3.4'
   }
