--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ buildscript {
 
   ext.deps = [
       'picocli': "info.picocli:picocli:${versions.picocli}",
-      'android': "org.robolectric:android-all:9-robolectric-4913185-2",
+      'android': "org.robolectric:android-all:10-robolectric-5803371",
       'animalSniffer': "org.codehaus.mojo:animal-sniffer-annotations:${versions.animalSniffer}",
       'assertj': "org.assertj:assertj-core:${versions.assertj}",
       'bouncycastle': "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}",
@@ -141,8 +141,11 @@ subprojects { project ->
     }
   }
 
-  // Animal Sniffer confirms we don't use APIs not on both Java 8 and Android 5.
+  // Animal Sniffer confirms we generally don't use APIs not on Java 8.
   animalsniffer {
+    // https://github.com/mojohaus/animal-sniffer/issues/70
+    excludeJars "android-all-*"
+    annotation "okhttp3.internal.SuppressSignatureCheck"
     sourceSets = [sourceSets.main]
   }
   dependencies {
