--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,34 +280,34 @@ workflows:
               ignore:
                 - master
                 - gh-pages
-      - testjdk8:
-          filters:
-            branches:
-              ignore:
-                - gh-pages
-      - testjdk8alpn:
-          filters:
-            branches:
-              only: master
+#      - testjdk8:
+#          filters:
+#            branches:
+#              ignore:
+#                - gh-pages
+#      - testjdk8alpn:
+#          filters:
+#            branches:
+#              only: master
       - testjdk11:
           filters:
             branches:
               ignore:
                 - gh-pages
-      - testjdk12windows:
-          filters:
-            branches:
-              only: master
-      - testjdk13:
-          filters:
-            branches:
-              ignore:
-                - gh-pages
-      - testjdk14:
-          filters:
-            branches:
-              ignore:
-                - gh-pages
+#      - testjdk12windows:
+#          filters:
+#            branches:
+#              only: master
+#      - testjdk13:
+#          filters:
+#            branches:
+#              ignore:
+#                - gh-pages
+#      - testjdk14:
+#          filters:
+#            branches:
+#              ignore:
+#                - gh-pages
       - testbouncycastle
       #- testopenjsse
       #- testconscrypt
