--- a/samples/compare/build.gradle
+++ b/samples/compare/build.gradle
@@ -3,6 +3,7 @@ dependencies {
   implementation project(':mockwebserver')
   implementation project(':okhttp-tls')
 
+  testImplementation project(':okhttp-testing-support')
   testImplementation 'org.apache.httpcomponents.client5:httpclient5:5.0'
   testImplementation 'org.eclipse.jetty:jetty-client:9.4.27.v20200227'
   testImplementation deps.junit
