--- a/okhttp-tls/build.gradle
+++ b/okhttp-tls/build.gradle
@@ -9,13 +9,9 @@ jar {
 dependencies {
   api deps.okio
   implementation project(':okhttp')
-  implementation deps.bouncycastledebug
-  implementation deps.bouncycastlepkix, {
-    exclude module:"bcprov-jdk15on"
-  }
-  implementation deps.bouncycastletls, {
-    exclude module:"bcprov-jdk15on"
-  }
+  implementation deps.bouncycastle
+  implementation deps.bouncycastlepkix
+  implementation deps.bouncycastletls
   compileOnly deps.jsr305
 
   testImplementation project(':okhttp-testing-support')
