--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -25,7 +25,7 @@ dependencies {
   api deps.okio
   api deps.kotlinStdlib
   compileOnly deps.android
-  compileOnly deps.bouncycastledebug
+  compileOnly deps.bouncycastle
   compileOnly deps.bouncycastletls
   compileOnly deps.conscrypt
   compileOnly deps.openjsse
