--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -44,9 +44,8 @@ dependencies {
     exclude group: 'org.openjsse', module: 'openjsse'
     exclude group: 'org.conscrypt', module: 'conscrypt-openjdk-uber'
     exclude group: 'software.amazon.cryptools', module: 'AmazonCorrettoCryptoProvider'
-    exclude group: 'org.bouncycastle', module: 'bcprov-debug-jdk15on'
   }
-  androidTestImplementation "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}"
+  androidTestImplementation "org.bouncycastle:bcprov-debug-jdk15on:${versions.bouncycastle}"
   androidTestImplementation "org.bouncycastle:bctls-jdk15on:${versions.bouncycastle}"
   androidTestImplementation "org.conscrypt:conscrypt-android:2.4.0"
   androidTestImplementation project(':mockwebserver')
