--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     exclude group: 'org.conscrypt', module: 'conscrypt-openjdk-uber'
     exclude group: 'software.amazon.cryptools', module: 'AmazonCorrettoCryptoProvider'
   }
+  androidTestImplementation "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}"
+  androidTestImplementation "org.bouncycastle:bctls-jdk15on:${versions.bouncycastle}"
   androidTestImplementation "org.conscrypt:conscrypt-android:2.4.0"
   androidTestImplementation project(':mockwebserver')
   androidTestImplementation project(':okhttp-tls')
