--- a/okhttp-tls/build.gradle
+++ b/okhttp-tls/build.gradle
@@ -13,6 +13,7 @@ dependencies {
   implementation deps.bouncycastlepkix
   implementation deps.bouncycastletls
   compileOnly deps.jsr305
+  compileOnly deps.animalSniffer
 
   testImplementation project(':okhttp-testing-support')
   testImplementation deps.junit
