--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
       'jnrUnixsocket': '0.28',
       'jsoup': '1.13.1',
       'junit': '4.13',
-      'kotlin': '1.4-M1',
+      'kotlin': '1.4-M2-eap-72',
       'moshi': '1.9.2',
       'okio': '2.6.0',
       'ktlint': '0.36.0',
@@ -39,7 +39,7 @@ buildscript {
       'jsoup': "org.jsoup:jsoup:${versions.jsoup}",
       'jsr305': "com.google.code.findbugs:jsr305:${versions.findbugs}",
       'junit': "junit:junit:${versions.junit}",
-      'kotlinStdlib': "org.jetbrains.kotlin:kotlin-stdlib:1.4-M1",
+      'kotlinStdlib': "org.jetbrains.kotlin:kotlin-stdlib:1.4-M2-eap-72",
       'moshi': "com.squareup.moshi:moshi:${versions.moshi}",
       'moshiKotlin': "com.squareup.moshi:moshi-kotlin-codegen:${versions.moshi}",
       'okio': "com.squareup.okio:okio:${versions.okio}",
@@ -48,10 +48,10 @@ buildscript {
 
   dependencies {
     classpath 'net.ltgt.gradle:gradle-errorprone-plugin:1.1.1'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4-M1"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4-M2-eap-72"
     classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
-    classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.27.1'
-    classpath 'com.android.tools.build:gradle:3.6.2'
+    classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.28.1'
+    classpath 'com.android.tools.build:gradle:3.6.3'
   }
 
   repositories {
@@ -59,7 +59,7 @@ buildscript {
     gradlePluginPortal()
     google()
     maven {
-      url = "https://dl.bintray.com/kotlin/kotlin-eap/"
+      url = "https://dl.bintray.com/kotlin/kotlin-dev/"
     }
   }
 }
@@ -101,7 +101,7 @@ allprojects {
     }
     google()
     maven {
-      url = "https://dl.bintray.com/kotlin/kotlin-eap/"
+      url = "https://dl.bintray.com/kotlin/kotlin-dev/"
     }
   }
 
