--- a/okhttp-logging-interceptor/pom.xml
+++ b/okhttp-logging-interceptor/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.squareup.okhttp3</groupId>
     <artifactId>parent</artifactId>
-    <version>3.12.12-SNAPSHOT</version>
+    <version>3.12.12</version>
   </parent>
 
   <artifactId>logging-interceptor</artifactId>
