--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ commands:
 jobs:
   compile:
     docker:
-      - image: circleci/openjdk:11.0.7-jdk-buster
+      - image: yschimke/multijdk:latest
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -91,7 +91,7 @@ jobs:
 
   checkjdk11:
     docker:
-      - image: circleci/openjdk:11.0.7-jdk-buster
+      - image: yschimke/multijdk:latest
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -124,7 +124,7 @@ jobs:
 
   testjdk8:
     docker:
-      - image: circleci/openjdk:11.0.6-jdk-stretch
+      - image: yschimke/multijdk:latest
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -135,11 +135,11 @@ jobs:
 
       - runtests:
           platform: jdk8
-          testjdk: -Dtest.java.home=/usr/lib/jvm/java-8-openjdk-amd64
+          testjdk: -Dtest.java.home=/usr/local/jdk-8.0.252
 
   testjdk8alpn:
     docker:
-      - image: circleci/openjdk:11.0.6-jdk-stretch
+      - image: yschimke/multijdk:latest
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -150,11 +150,11 @@ jobs:
 
       - runtests:
           platform: jdk8alpn
-          testjdk: -Dtest.java.home=/usr/lib/jvm/java-8-openjdk-amd64 -Dalpn.boot.version=8.1.13.v20181017
+          testjdk: -Dtest.java.home=/usr/local/jdk-8.0.252 -Dalpn.boot.version=8.1.13.v20181017
 
   testopenjsse:
     docker:
-      - image: circleci/openjdk:11.0.7-jdk-buster
+      - image: yschimke/multijdk:latest
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -169,7 +169,7 @@ jobs:
 
   testjdk11:
     docker:
-      - image: circleci/openjdk:11.0.7-jdk-buster
+      - image: yschimke/multijdk:latest
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -196,23 +196,9 @@ jobs:
       - runtests:
           platform: jdk9
 
-  testjdk13:
-    docker:
-      - image: circleci/openjdk:13.0.2-jdk-buster
-
-    environment:
-      JVM_OPTS: -Xmx1g
-      TERM: dumb
-
-    steps:
-      - checkout
-
-      - runtests:
-          platform: jdk9
-
   testjdk14:
     docker:
-      - image: circleci/openjdk:14.0.1-jdk-buster
+      - image: yschimke/multijdk:latest
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -226,7 +212,7 @@ jobs:
 
   testconscrypt:
     docker:
-      - image: circleci/openjdk:11.0.7-jdk-buster
+      - image: yschimke/multijdk:latest
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -240,7 +226,7 @@ jobs:
 
   testbouncycastle:
     docker:
-      - image: circleci/openjdk:11.0.7-jdk-buster
+      - image: yschimke/multijdk:latest
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -254,7 +240,7 @@ jobs:
 
   testcorretto:
     docker:
-      - image: circleci/openjdk:11.0.7-jdk-buster
+      - image: yschimke/multijdk:latest
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -294,11 +280,6 @@ workflows:
             branches:
               ignore:
                 - gh-pages
-      - testjdk13:
-          filters:
-            branches:
-              ignore:
-                - gh-pages
       - testjdk14:
           filters:
             branches:
@@ -334,9 +315,6 @@ workflows:
           requires:
             - compile
       - testjdk12windows:
-          requires:
-            - compile
-      - testjdk13:
           requires:
             - compile
       - testconscrypt:
