--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
       'kotlin': '1.4-M2',
       'moshi': '1.9.2',
       'okio': '2.6.0',
-      'ktlint': '0.36.0',
+      'ktlint': '0.37.0',
       'picocli': '4.2.0',
       'openjsse': '1.1.0'
   ]
@@ -47,10 +47,10 @@ buildscript {
   ]
 
   dependencies {
-    classpath 'net.ltgt.gradle:gradle-errorprone-plugin:1.1.1'
+    classpath 'net.ltgt.gradle:gradle-errorprone-plugin:1.2.1'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4-M2"
     classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
-    classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.28.1'
+    classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.30.0'
     classpath 'com.android.tools.build:gradle:3.6.3'
   }
 
@@ -124,10 +124,9 @@ subprojects { project ->
   apply plugin: 'org.jetbrains.kotlin.platform.jvm'
   apply plugin: 'checkstyle'
   apply plugin: 'ru.vyarus.animalsniffer'
-  // TODO raise issue
 //  apply plugin: 'net.ltgt.errorprone'
   apply plugin: 'org.jetbrains.dokka'
-  apply plugin: 'com.diffplug.gradle.spotless'
+//  apply plugin: 'com.diffplug.gradle.spotless'
   sourceCompatibility = JavaVersion.VERSION_1_8
   targetCompatibility = JavaVersion.VERSION_1_8
 
@@ -160,12 +159,12 @@ subprojects { project ->
     signature 'org.codehaus.mojo.signature:java18:1.0@signature'
   }
 
-  spotless {
-    kotlin {
-      target "**/*.kt"
-      ktlint(versions.ktlint).userData(['indent_size': '2', 'continuation_indent_size': '2'])
-    }
-  }
+//  spotless {
+//    kotlin {
+//      target "**/*.kt"
+//      ktlint(versions.ktlint).userData(['indent_size': '2', 'continuation_indent_size': '2'])
+//    }
+//  }
 
   tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
@@ -214,17 +213,17 @@ subprojects { project ->
   }
 
 //  dependencies {
-    //noinspection GradleDynamicVersion
+//    //noinspection GradleDynamicVersion
 //    errorproneJavac 'com.google.errorprone:javac:9+181-r4173-1'
-//    errorprone 'com.google.errorprone:error_prone_core:2.3.4'
+//    errorprone 'com.google.errorprone:error_prone_core:2.4.0'
 //  }
   tasks.withType(JavaCompile).configureEach {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 
 //    options.errorprone {
-//      check("MissingFail", CheckSeverity.ERROR)
-//      check("MissingOverride", CheckSeverity.ERROR)
+//      check("MissingFail", net.ltgt.gradle.errorprone.CheckSeverity.ERROR)
+//      check("MissingOverride", net.ltgt.gradle.errorprone.CheckSeverity.ERROR)
 //      enabled = JavaVersion.current() < JavaVersion.VERSION_12
 //    }
   }
