--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,6 +154,7 @@ jobs:
 
   testopenjsse:
     docker:
+      # Held back to ensure a JDK 8 is in the image, which is true for stretch but not buster
       - image: circleci/openjdk:11.0.6-jdk-stretch
 
     environment:
