--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':samples:simple-client'
 include ':samples:slack'
 include ':samples:static-server'
 include ':samples:unixdomainsockets'
+include ':robovm-test'
