--- a/android-test/build.gradle
+++ b/android-test/build.gradle
@@ -21,13 +21,15 @@ android {
     exclude("META-INF/DEPENDENCIES")
   }
 
-  compileSdkVersion 29
+  compileSdkVersion 30
 
   defaultConfig {
-    minSdkVersion 21
-    targetSdkVersion 29
+    minSdkVersion 16
+    targetSdkVersion 30
     versionCode 1
     versionName "1.0"
+
+    multiDexEnabled true
 
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     testInstrumentationRunnerArguments(['notClass': 'org.conscrypt.KitKatPlatformOpenSSLSocketImplAdapter,org.bouncycastle.pqc.crypto.qtesla.QTeslaKeyEncodingTests'])
@@ -39,6 +41,7 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-reflect:${versions.kotlin}"
   implementation 'com.google.android.gms:play-services-safetynet:17.0.0'
   implementation project(':okhttp')
+  implementation 'com.android.support:multidex:1.0.3'
   testImplementation 'junit:junit:4.13'
   androidTestImplementation(project(':okhttp-testing-support')) {
     exclude group: 'org.openjsse', module: 'openjsse'
@@ -52,9 +55,9 @@ dependencies {
   androidTestImplementation project(':okhttp-tls')
   androidTestImplementation project(':okhttp-dnsoverhttps')
   androidTestImplementation project(':okhttp-logging-interceptor')
-  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
   androidTestImplementation 'org.apache.httpcomponents.client5:httpclient5:5.0'
-  androidTestImplementation 'com.squareup.moshi:moshi:1.9.2'
-  androidTestImplementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
+  androidTestImplementation 'com.squareup.moshi:moshi:1.9.3'
+  androidTestImplementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
 }
