--- a/okhttp-brotli/build.gradle
+++ b/okhttp-brotli/build.gradle
@@ -7,6 +7,7 @@ jar {
 dependencies {
   api project(':okhttp')
   api deps.brotli
+  compileOnly deps.androidxAnnotation
   compileOnly deps.jsr305
 
   testImplementation project(':okhttp-testing-support')
