--- a/okhttp-dnsoverhttps/build.gradle
+++ b/okhttp-dnsoverhttps/build.gradle
@@ -7,6 +7,7 @@ jar {
 dependencies {
   api project(':okhttp')
   compileOnly deps.jsr305
+  compileOnly deps.androidxAnnotation
 
   testImplementation project(':okhttp-testing-support')
   testImplementation project(':mockwebserver')
