--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,10 @@ buildscript {
       'jnrUnixsocket': '0.28',
       'jsoup': '1.13.1',
       'junit': '4.13',
-      'kotlin': '1.3.72',
+      'kotlin': '1.4.0',
       'moshi': '1.9.2',
-      'okio': '2.7.0',
-      'ktlint': '0.36.0',
+      'okio': '2.8.0',
+      'ktlint': '0.38.0',
       'picocli': '4.2.0',
       'openjsse': '1.1.0'
   ]
@@ -47,11 +47,9 @@ buildscript {
   ]
 
   dependencies {
-    classpath 'net.ltgt.gradle:gradle-errorprone-plugin:1.1.1'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.0"
     classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
-    classpath 'com.diffplug.spotless:spotless-plugin-gradle:3.27.1'
-    classpath 'com.android.tools.build:gradle:3.6.2'
+    classpath "com.android.tools.build:gradle:4.0.1"
   }
 
   repositories {
@@ -62,9 +60,11 @@ buildscript {
 }
 
 plugins {
-  id 'ru.vyarus.animalsniffer' version '1.5.0'
-  id 'com.github.johnrengelman.shadow' version '5.2.0'
-  id 'me.champeau.gradle.japicmp' version '0.2.9'
+  id "ru.vyarus.animalsniffer" version "1.5.0"
+  id "com.github.johnrengelman.shadow" version "5.2.0"
+  id "me.champeau.gradle.japicmp" version "0.2.9"
+  id "com.diffplug.spotless" version "5.1.2"
+  id "net.ltgt.errorprone" version "1.2.1"
 }
 
 /** Returns the artifact ID for the project, or null if it is not published. */
@@ -112,14 +112,12 @@ subprojects { project ->
   if (project.name == 'android-test') return
   if (project.name == 'okhttp-bom') return
 
+  apply plugin: "org.jetbrains.kotlin.jvm"
   apply plugin: 'java'
   apply plugin: 'java-library'
-  apply plugin: 'org.jetbrains.kotlin.platform.jvm'
   apply plugin: 'checkstyle'
   apply plugin: 'ru.vyarus.animalsniffer'
-  apply plugin: 'net.ltgt.errorprone'
   apply plugin: 'org.jetbrains.dokka'
-  apply plugin: 'com.diffplug.gradle.spotless'
   sourceCompatibility = JavaVersion.VERSION_1_8
   targetCompatibility = JavaVersion.VERSION_1_8
 
@@ -150,13 +148,6 @@ subprojects { project ->
   dependencies {
     signature 'net.sf.androidscents.signature:android-api-level-21:5.0.1_r2@signature'
     signature 'org.codehaus.mojo.signature:java18:1.0@signature'
-  }
-
-  spotless {
-    kotlin {
-      target "**/*.kt"
-      ktlint(versions.ktlint).userData(['indent_size': '2', 'continuation_indent_size': '2'])
-    }
   }
 
   tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
@@ -205,20 +196,9 @@ subprojects { project ->
     }
   }
 
-  dependencies {
-    //noinspection GradleDynamicVersion
-    errorproneJavac 'com.google.errorprone:javac:9+181-r4173-1'
-    errorprone 'com.google.errorprone:error_prone_core:2.3.4'
-  }
   tasks.withType(JavaCompile).configureEach {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
-
-    options.errorprone {
-      check("MissingFail", CheckSeverity.ERROR)
-      check("MissingOverride", CheckSeverity.ERROR)
-      enabled = JavaVersion.current() < JavaVersion.VERSION_12
-    }
   }
 
   dokka {
