--- a/build.gradle
+++ b/build.gradle
@@ -121,6 +121,10 @@ subprojects { project ->
   sourceCompatibility = JavaVersion.VERSION_1_8
   targetCompatibility = JavaVersion.VERSION_1_8
 
+  tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+  }
+
   checkstyleMain.exclude '**/CipherSuite.java'
   configurations {
     checkstyleConfig
