--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,21 @@ jobs:
           platform: jdk8alpn
           testjdk: -Dtest.java.home=/usr/lib/jvm/java-8-openjdk-amd64 -Dalpn.boot.version=8.1.13.v20181017
 
+  testjdk8corretto:
+    docker:
+      - image: circleci/openjdk:11.0.6-jdk-stretch
+
+    environment:
+      JVM_OPTS: -Xmx1g
+      TERM: dumb
+
+    steps:
+      - checkout
+
+      - runtests:
+          platform: corretto
+          testjdk: -Dtest.java.home=/usr/lib/jvm/java-8-openjdk-amd64
+
   testopenjsse:
     docker:
       # Held back to ensure a JDK 8 is in the image, which is true for stretch but not buster
@@ -181,6 +196,20 @@ jobs:
 
       - runtests:
           platform: jdk9
+
+  testjdk11corretto:
+    docker:
+      - image: circleci/openjdk:11.0.7-jdk-buster
+
+    environment:
+      JVM_OPTS: -Xmx1g
+      TERM: dumb
+
+    steps:
+      - checkout
+
+      - runtests:
+          platform: corretto
 
   testjdk12windows:
     executor:
@@ -310,6 +339,8 @@ workflows:
       #- testopenjsse
       #- testconscrypt
       #- testcorretto
+      - testjdk8corretto
+      - testjdk11corretto
   nightly:
     triggers:
       - schedule:
