Add PymdownX tabbed

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ markdown_extensions:
   - pymdownx.smartsymbols
   - pymdownx.superfences
   - pymdownx.tilde
+  - pymdownx.tabbed
   - tables
 
 nav:
