--- a/okhttp-sse/build.gradle
+++ b/okhttp-sse/build.gradle
@@ -1,9 +1,13 @@
 apply plugin: 'me.champeau.gradle.japicmp'
 
 jar {
-  manifest {
-    attributes('Automatic-Module-Name': 'okhttp3.sse')
-  }
+  // modify these lines for MANIFEST.MF properties or for specific bnd instructions
+  // is okhttp3.internal.sse package used in dependent libraries?
+  bnd '''
+  Export-Package: okhttp3.sse
+  Automatic-Module-Name: okhttp3.sse
+  Bundle-SymbolicName: com.squareup.okhttp3.sse
+  '''
 }
 
 dependencies {
