--- a/okhttp-logging-interceptor/build.gradle
+++ b/okhttp-logging-interceptor/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'me.champeau.gradle.japicmp'
 
 jar {
-  manifest {
-    attributes('Automatic-Module-Name': 'okhttp3.logging')
-  }
+  // modify these lines for MANIFEST.MF properties or for specific bnd instructions
+  bnd '''
+  Export-Package: okhttp3.logging
+  Automatic-Module-Name: okhttp3.logging
+  Bundle-SymbolicName: com.squareup.okhttp3.logging
+  '''
 }
 
 dependencies {
